# simple-minded-home

./: .gitignore  LICENSE  README.md
env-server/: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  balena.yml  docker-compose.yml
env-server/frontend/: env-server.js  index.html
env-server/src/: main.rs  queries.rs
env-server/src/db/migrations/: 20250530135805_initial-schema.down.sql  20250530135805_initial-schema.up.sql
temperature-humidity-monitor/: README.md  bitmaps.go  font.pxo  go.sum  main.go  networking.go
temperature-humidity-sensor/: README.md  bitmaps.go  borrowed.go  font.pxo  go.mod  go.sum  log.go  main.go  networking.go  secrets.go.template
