[package]
name = "env-server"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.4", features = [ "migrate" ]}

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]
